--- a/src/pages/cad-servicos/cad-servicos.scss
+++ b/src/pages/cad-servicos/cad-servicos.scss
@@ -1,3 +1,27 @@
 page-cad-servicos {
 
+    
+    .toolbar-title-md {
+        padding: 0 10px !important;
+        font-size: 1.5rem !important;
+        font-weight: 100 !important;
+        color: #d6d6d6;
+    }
+
+    .toolbar-background-md {
+       
+        background:#2c3842
+    }
+
+    .bar-button-default-md, .bar-button-clear-md-default, .bar-button-md-default {
+    
+        color:#2bff00;
+    }
+
+    .text-input-md {
+        margin: 0px 0px;
+        padding: 0;
+        font-size: 15px ;
+        font-size: 13px;
+    }
 }
