--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,11 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #312f31,
-  secondary:  #16be07,
-  danger:     #f10000,
-  light:      #e2de03,
-  dark:       rgb(3, 57, 173)
+  primary:    #790079,
+  secondary:  #8f0349,
+  danger:     #772f4b,
+  light:      #94788b,
+  dark:       rgb(68, 0, 23)
 );
 
 
