--- a/src/pages/listar-servicos/listar-servicos.scss
+++ b/src/pages/listar-servicos/listar-servicos.scss
@@ -1,3 +1,35 @@
 page-listar-servicos {
 
-}
+    .toolbar-title-md {
+        padding: 0 10px !important;
+        font-size: 1.5rem !important;
+        font-weight: 100 !important;
+        color: #424242;
+    }
+
+
+    img {
+        border-radius: 5px;
+        border:1px solid rgb(184, 183, 183);
+    }
+
+    h1{
+        font-size: 18px !important;
+        font-weight: 600;
+    }
+    h2{
+        font-size: 12px !important;
+        font-weight: 600;
+    }
+
+    ion-icon {
+         
+           mask-size: contain !important;
+           mask-position: 10% 10% !important;
+           mask-repeat: no-repeat !important;
+           font-size: 20px !important;
+      
+     }
+
+
+    }
